# crayfish

./: .gitignore  Cargo.toml  README.md  build-debug.ps1  build-release.ps1  scene_config.json
src/: camera.rs  color.rs  configuration.rs  defs.rs  display.rs  intersections.rs  light.rs  main.rs  material.rs  math.rs  matrix.rs  ray.rs  records.rs  scene.rs  scene_config.json  shapes.rs  todo.txt  transformation.rs  vec.rs  world.rs  worldbuilder.rs
