[package]
name = "crayfish"
version = "0.1.0"
authors = ["duckyquackquack"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.24.1"