[package]
name = "crayfish"
version = "0.1.0"
authors = ["duckyquackquack"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
minifb = "0.19.2"

# [profile.release]
# lto = true

# useful for profiling
# [profile.release]
# debug = true